[gd_scene load_steps=7 format=2]

[ext_resource path="res://Source/Levels/Level1/Tiles/tile_st.png" type="Texture" id=1]
[ext_resource path="res://Source/LevelObjects/Stairs/StairwayManager.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 102, 9.36915 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.75, 6.75 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9, 8.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 95.4594, 9.75 )

[node name="Stairway" type="StaticBody2D"]
collision_layer = 16
collision_mask = 16
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -76, 102 )
rotation = 0.785398
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -30, 143 )
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -61, 110 )
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( -93, 79 )
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( -125, 47 )
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )

[node name="BottomDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomDetector"]
position = Vector2( 25.25, 147.75 )
shape = SubResource( 2 )

[node name="TopDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopDetector"]
position = Vector2( -155, 21 )
shape = SubResource( 3 )

[node name="MiddleDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MiddleDetector"]
position = Vector2( -62, 78 )
rotation = 0.785398
shape = SubResource( 4 )

[connection signal="body_entered" from="BottomDetector" to="." method="_on_BottomDetector_body_entered"]
[connection signal="body_exited" from="BottomDetector" to="." method="_on_BottomDetector_body_exited"]
[connection signal="body_entered" from="TopDetector" to="." method="_on_TopDetector_body_entered"]
[connection signal="body_exited" from="TopDetector" to="." method="_on_TopDetector_body_exited"]
[connection signal="body_exited" from="MiddleDetector" to="." method="_on_MiddleDetector_body_exited"]
